# ReSpaSol

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.cc  bench_consts.h  bench_spmv.cc  bench_spmv_local.cc  bench_spmv_malloc.cc  compile_commands.json  run_mumps.sh  run_pardiso.sh  run_spmv.sh  run_superILU.sh  run_superLU.sh  run_superLU.sh~  run_superLU_MT.sh  test_mumps.c  test_pardiso.c  test_spmv.c  test_superILU.c  test_superLU.c  test_superLU_MT.c  test_umfpack.c
GPU/: Makefile  ilu0.cu  run.sh  run_ilu0.sh  run_spmv.sh  solve.cu  spmv.cu
ReadMatrixMarket/: CMakeLists.txt  Makefile  loadMatrixMarket.cpp  loadMatrixMarket.h
ReadMatrixMarket/matrices/: one.mtx
ReadMatrixMarket/test/: test.cpp
matrices/big/: List_of_big_matrices.txt  List_of_big_matrices.txt~  getLargerMatrices.sh
matrices/moderate/: List_of_moderate_matrices.txt  getModerateSizeMatrices.sh
